<resources>
    <string name="app_name">GuatapéTuristico</string>
    <string name="Guatapé">Guatapé</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="IniciarSesión">Iniciar Sesión</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Registro">Registro</string>
    <string name="repassword">Repetir Password</string>
    <string name="email">Email</string>
    <string name="Cancelar">Cancelar</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="Principal">Principal</string>
    <string name="Pueblo">Guatapé...Pueblo de zócalos y colores</string>

    <string name="ToastUser">Usuario o Contraseña incorrecta</string>
    <string name="ToastCampos">Por favor complete todos los campos</string>
    <string name="ToastErrorReg">Error en Registro</string>
    <string name="ToastPass">Contraseñas no coinciden</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hotel">HotelActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_bar">BarActivity</string>
    <string name="title_activity_interes">InteresActivity</string>
    <string name="Hoteles">Hoteles</string>
    <string name="Bares">Bares</string>
    <string name="Interes">Sitios de Interés</string>
    <string name="Hotel1">Hotel Los Recuerdos</string>
    <string name="Hotel2">Hotel El Encuentro</string>
    <string name="Hotel3">Hotel Pietra Santa</string>
    <string name="Bar1">El Muelle Resto-Bar</string>
    <string name="Bar2">Balcón de la Avenida</string>
    <string name="Bar3">Bar Baroja</string>
    <string name="Interes1">La Piedra del Peñol</string>
    <string name="Interes2">Plazoleta de Zócalos</string>
    <string name="Interes3">Represa</string>
    <string name="Sitio1">Sitio de Interés 1</string>
    <string name="Sitio2">Sitio de Interés 2</string>
    <string name="Sitio3">Sitio de Interés 3</string>
    <string name="desInteres1">Esta es la descripcion de la piedra</string>
    <string name="precInteres1">15.000 COP</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_hotel_d">GuatapéTuristico</string>
    <string name="title_activity_main_d">GuatapéTuristico</string>
    <string name="title_activity_interes_d">GuatapéTuristico</string>
    <string name="title_activity_bar_d">GuatapéTuristico</string>

    <string name="rest1">Pizzería De Luiggi</string>
    <string name="rest2">Café La Viña</string>
    <string name="rest3">Thai Terrace</string>
    <string name="title_activity_rest1">GuatapéTuristico</string>
    <string name="title_activity_rest2">GuatapéTuristico</string>
    <string name="title_activity_rest3">GuatapéTuristico</string>
    <string name="Restaurantes">Restaurantes</string>
    <string name="title_activity_rest_d">GuatapéTuristico</string>
</resources>
