<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_hotel"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/Hoteles" />

        <item
            android:id="@+id/nav_interes"
            android:icon="@drawable/ic_terrain_black_24dp"
            android:title="@string/Interes" />

        <item
            android:id="@+id/nav_bar"
            android:icon="@drawable/ic_local_bar_black_24dp"
            android:title="@string/Bares" />

        <item
            android:id="@+id/nav_rest"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/Restaurantes" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/cerrarSesion" />

        </menu>
    </item>

</menu>
