<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jorge.guatapeturistico.RegistroActivity"
    android:orientation="vertical"
    android:background="@color/khaki">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registro"
        android:textSize="40dp"
        android:gravity="center"
        android:textColor="@color/darkgoldenrod"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="181dp"
        android:src="@drawable/guatape2"
        android:id="@+id/imageView"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/username"
        android:gravity="center"
        android:id="@+id/eUsuario2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:gravity="center"
        android:id="@+id/ePassword2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/repassword"
        android:gravity="center"
        android:id="@+id/eReppass"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/email"
        android:gravity="center"
        android:id="@+id/eEmail"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse"
            android:background="@color/peru"
            android:layout_weight="1"
            android:id="@+id/bReg"
            android:layout_margin="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancelar"
            android:background="@color/peru"
            android:layout_weight="1"
            android:id="@+id/bCan"
            android:layout_margin="10dp"/>

    </LinearLayout>


</LinearLayout>
