<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jorge.guatapeturistico.LoginActivity"
    android:orientation="vertical"
    android:background="@color/khaki">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Guatapé"
        android:textSize="40dp"
        android:gravity="center"
        android:textColor="@color/darkgoldenrod"
        android:textAllCaps="true"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:src="@drawable/guatape"
        android:id="@+id/imageView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/username"
        android:gravity="center"
        android:id="@+id/eUsuario"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        android:id="@+id/ePassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:text="@string/IniciarSesión"
        android:background="@color/peru"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:id="@+id/bInicio" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:text="@string/Registrarse"
        android:gravity="center"
        android:layout_weight="1"
        android:textSize="20sp"
        android:id="@+id/tReg"/>

</LinearLayout>
