<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jorge.guatapeturistico.PerfilActivity"
    android:orientation="vertical"
    android:background="@color/khaki">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/perfil"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout style="@style/Layouth">

            <TextView style="@style/TextViewstyle"
                android:text="@string/username"></TextView>

            <EditText style="@style/EditTextstyle"
                android:id="@+id/eUsuario3"></EditText>

        </LinearLayout>

        <LinearLayout style="@style/Layouth">

            <TextView style="@style/TextViewstyle"
                android:text="@string/password"></TextView>

            <EditText style="@style/EditTextstyle"
                android:id="@+id/ePassword3"></EditText>

        </LinearLayout>

        <LinearLayout style="@style/Layouth">

            <TextView style="@style/TextViewstyle"
                android:text="@string/email"></TextView>

            <EditText style="@style/EditTextstyle"
                android:id="@+id/eEmail3"></EditText>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
