<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/guatape3"
        android:id="@+id/iFoto"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Interes1"
            android:textColor="@color/saddlebrown"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:id="@+id/tInter"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/desInteres1"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tDes1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/precInteres1"
                android:textColor="@color/black"
                android:gravity="start"
                android:layout_margin="5dp"
                android:id="@+id/tPrec1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/precInteres1"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textAlignment="textEnd"
                android:id="@+id/tPrec2"/>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>